# android-navigation

./: WORKSPACE  bazel-android-navigation  bazel-bin  bazel-out  bazel-testlogs
.aswb/: .bazelproject
app/java/: BUILD.bazel
tools/bazel/rules/: dependencies.bzl
